# rtp-midi

./: CMakeLists.txt  LICENSE  README.md  rtpmidi.py
src/: CMakeLists.txt  EventCallback.h  avahiClient.cpp  main.cpp  rtpmidi.cpp  rtpmidi.h
